force-app/main/default/objects/Account/fields/lmsilt__SLAExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>lmsilt__SLAExpirationDate__c</fullName>
    <label>deprecated</label>
    <type>Date</type>
</CustomField>