force-app/main/default/objects/Account/fields/lmsilt__SLASerialNumber__c.field-meta.xml
<CustomField>
    <fullName>lmsilt__SLASerialNumber__c</fullName>
    <label>deprecated</label>
    <length>10</length>
    <type>Text</type>
</CustomField>