force-app/main/default/objects/Account/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>IF(
OR( BillingCountry = &quot;US&quot;, BillingCountry = &quot;USA&quot;, BillingCountry = &quot;United States&quot;),
	IF((ISBLANK(BillingCity) || ISBLANK(BillingState)), BillingCity &amp; &quot; &quot; &amp; BillingState, BillingCity &amp; &quot;, &quot; &amp; BillingState),
	IF((ISBLANK(BillingCountry) || ISBLANK(BillingCity)), BillingCity &amp; &quot; &quot; &amp; BillingCountry, BillingCity &amp; &quot;, &quot; &amp; BillingCountry)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>