force-app/main/default/objects/Account/fields/Long_Term_Investor__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Long Term Investor</label>
    <type>Checkbox</type>
</CustomField>