force-app/main/default/objects/Account/fields/Match_Data_Profile__c.field-meta.xml
<CustomField>
    <fullName>Match_Data_Profile__c</fullName>
    <label>Match Data Profile</label>
    <length>28</length>
    <type>Text</type>
</CustomField>