force-app/main/default/objects/Account/fields/Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Score__c</fullName>
    <label>Match Score</label>
    <length>8</length>
    <type>Text</type>
</CustomField>