force-app/main/default/objects/Account/fields/Max_Fund_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Fund_Size__c</fullName>
    <label>Max Fund Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>