force-app/main/default/objects/Account/fields/Maximum_Revenue_MM__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Revenue_MM__c</fullName>
    <label>Maximum Revenue (MM)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>