force-app/main/default/objects/Account/fields/Min_Fund_Size__c.field-meta.xml
<CustomField>
    <fullName>Min_Fund_Size__c</fullName>
    <label>Min Fund Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>