force-app/main/default/objects/Account/fields/Minimum_Investment_MM__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Investment_MM__c</fullName>
    <label>Minimum Investment (MM)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>