force-app/main/default/objects/Account/fields/Minimum_Return__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Return__c</fullName>
    <label>Minimum Return (%)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>