force-app/main/default/objects/Account/fields/Minority_Investor__c.field-meta.xml
<CustomField>
    <fullName>Minority_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minority Investor</label>
    <type>Checkbox</type>
</CustomField>