force-app/main/default/objects/Account/fields/Most_Recent_Company_Financial__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Company_Financial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Company Financial</label>
    <referenceTo>Company_Financial__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>