force-app/main/default/objects/Account/fields/Most_Recent_Fund_Size_MM2__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Fund_Size_MM2__c</fullName>
    <formula>CapIQ_Company__r.Most_Recent_Fund_Size_MM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Fund Size (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>