force-app/main/default/objects/Account/fields/Most_Recent_Fund_Size_MM__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Fund_Size_MM__c</fullName>
    <label>Most Recent Fund Size (MM)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>