force-app/main/default/objects/Account/fields/My_Company__c.field-meta.xml
<CustomField>
    <fullName>My_Company__c</fullName>
    <formula>CONTAINS(Coverage_Team_Aggregate__c,$User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Company</label>
    <type>Checkbox</type>
</CustomField>