force-app/main/default/objects/Account/fields/NaicsDesc__c.field-meta.xml
<CustomField>
    <fullName>NaicsDesc__c</fullName>
    <label>NAICS Description</label>
    <length>120</length>
    <type>Text</type>
</CustomField>