force-app/main/default/objects/Account/fields/No_Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>No_Parent_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when company is the HQ or main office</inlineHelpText>
    <label>HQ</label>
    <type>Checkbox</type>
</CustomField>