force-app/main/default/objects/Account/fields/Opportunity_Company__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Company__c</fullName>
    <formula>IF( Opportunity_Count__c &gt; 0 || Engagement_Count__c &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies company is client or subject on an opportunity or engagement.  Visible to Data Hygiene team that has no access to view opportunities and engagements.</inlineHelpText>
    <label>Opportunity Company</label>
    <type>Checkbox</type>
</CustomField>