force-app/main/default/objects/Account/fields/Outlook_Review__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check Outlook Review checkbox when Acccount created from Outlook</inlineHelpText>
    <label>Outlook Review</label>
    <type>Checkbox</type>
</CustomField>