force-app/main/default/objects/Account/fields/Parent_Sponsor_Company__c.field-meta.xml
<CustomField>
    <fullName>Parent_Sponsor_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Sponsor Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Parent Sponsor Companies)</relationshipLabel>
    <relationshipName>Parent_Sponsor_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>