force-app/main/default/objects/Account/fields/Patent_Count__c.field-meta.xml
<CustomField>
    <fullName>Patent_Count__c</fullName>
    <label>Patent Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>