force-app/main/default/objects/Account/fields/PE_Focus__c.field-meta.xml
<CustomField>
    <fullName>PE_Focus__c</fullName>
    <label>PE Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Syndicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>