force-app/main/default/objects/Account/fields/Percentage_of_Fund_Invested__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Fund_Invested__c</fullName>
    <label>Percentage of Fund Invested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>