force-app/main/default/objects/Account/fields/PFG_Description__c.field-meta.xml
<CustomField>
    <fullName>PFG_Description__c</fullName>
    <label>PFG Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>