force-app/main/default/objects/Account/fields/PFG_Strategy_Notes__c.field-meta.xml
<CustomField>
    <fullName>PFG_Strategy_Notes__c</fullName>
    <label>PFG Strategy Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>