force-app/main/default/objects/Account/fields/Preqin_Name__c.field-meta.xml
<CustomField>
    <fullName>Preqin_Name__c</fullName>
    <label>Preqin Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>