force-app/main/default/objects/Account/fields/Primary_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Billing Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Primary Billing Contact)</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>