force-app/main/default/objects/Account/fields/Primary_Coverage_Officer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Coverage_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the Primary Coverage Officer for the Company</description>
    <label>Primary Coverage Officer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>