force-app/main/default/objects/Account/fields/Primary_FS_Coverage_Officer__c.field-meta.xml
<CustomField>
    <fullName>Primary_FS_Coverage_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary FS Coverage Officer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Primary FS Coverage Officer)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>