force-app/main/default/objects/Account/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>Products information for DA profile</description>
    <inlineHelpText>For DA profiling</inlineHelpText>
    <label>Products</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>