force-app/main/default/objects/Account/fields/Recent_Company_Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Recent_Company_Financial_Year__c</fullName>
    <formula>Most_Recent_Company_Financial__r.Year_FORMULA__c</formula>
    <label>Recent Company Financial Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>