force-app/main/default/objects/Account/fields/Recent_EBITDA_MM__c.field-meta.xml
<CustomField>
    <fullName>Recent_EBITDA_MM__c</fullName>
    <formula>Most_Recent_Company_Financial__r.EBITDA_MM__c</formula>
    <inlineHelpText>Most recent Company Financial data.</inlineHelpText>
    <label>Recent EBITDA (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>