force-app/main/default/objects/Account/fields/Recent_EV_MM__c.field-meta.xml
<CustomField>
    <fullName>Recent_EV_MM__c</fullName>
    <formula>Most_Recent_Company_Financial__r.EV_MM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recent EV (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>