force-app/main/default/objects/Account/fields/Recent_EV_Source__c.field-meta.xml
<CustomField>
    <fullName>Recent_EV_Source__c</fullName>
    <formula>Text(Most_Recent_Company_Financial__r.EV_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recent EV Source</label>
    <type>Text</type>
</CustomField>