force-app/main/default/objects/Account/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <description>Registration Number - Oracle to populate the Registration number from the Tax Registration Section</description>
    <inlineHelpText>Registration Number - Oracle to populate the Registration number from the Tax Registration Section</inlineHelpText>
    <label>Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>