force-app/main/default/objects/Account/fields/Revenue_MM__c.field-meta.xml
<CustomField>
    <fullName>Revenue_MM__c</fullName>
    <label>Revenue (MM)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>