force-app/main/default/objects/Account/fields/RM_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>RM_Status_Notes__c</fullName>
    <label>RM Status Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>