force-app/main/default/objects/Account/fields/Secondaries__c.field-meta.xml
<CustomField>
    <fullName>Secondaries__c</fullName>
    <label>Secondaries</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>