force-app/main/default/objects/Account/fields/Shipping_Province__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Province__c</fullName>
    <label>Shipping Province</label>
    <length>64</length>
    <type>Text</type>
</CustomField>