force-app/main/default/objects/Account/fields/ShippingCountry_Old__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry_Old__c</fullName>
    <description>Shipping Country before pcklist turned ON</description>
    <label>ShippingCountry_Old</label>
    <length>40</length>
    <type>Text</type>
</CustomField>