force-app/main/default/objects/Account/fields/Situation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Situation_Notes__c</fullName>
    <label>Situation Notes</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>