force-app/main/default/objects/Account/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <description>Company Strategy</description>
    <inlineHelpText>Company Strategy</inlineHelpText>
    <label>Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>