force-app/main/default/objects/Account/fields/Stripped_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Stripped_Account_Name__c</fullName>
    <label>Stripped Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>