force-app/main/default/objects/Account/fields/Tax_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Registration_Type__c</fullName>
    <description>Oracle to populate the &quot;Tax Registration Type&quot; from the Tax Registration Section</description>
    <inlineHelpText>Oracle to populate the &quot;Tax Registration Type&quot; from the Tax Registration Section</inlineHelpText>
    <label>Tax Registration Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>