force-app/main/default/objects/Account/fields/Total_Debt_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt_EBITDA__c</fullName>
    <formula>Total_Debt_MM__c / EBITDA_MM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Debt/EBITDA</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>