force-app/main/default/objects/Account/fields/Total_Debt_MM__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt_MM__c</fullName>
    <label>Total Debt (MM)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>