force-app/main/default/objects/Account/fields/Total_Prospect_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Prospect_Expenses__c</fullName>
    <label>Total Prospect Expenses</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>