force-app/main/default/objects/Account/fields/Total_Raise_MM__c.field-meta.xml
<CustomField>
    <fullName>Total_Raise_MM__c</fullName>
    <label>Total Raise (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>