force-app/main/default/objects/Account/fields/Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>