force-app/main/default/objects/Account/recordTypes/Capital_Provider.recordType-meta.xml
<RecordType>
    <fullName>Capital_Provider</fullName>
    <active>true</active>
    <description>Private Equity Firms, Hedge Funds, Venture Capital firms and Banks.</description>
    <label>Capital Provider</label>
</RecordType>