force-app/main/default/objects/Account/recordTypes/Conflicts_Check_LDCCR.recordType-meta.xml
<RecordType>
    <fullName>Conflicts_Check_LDCCR</fullName>
    <active>true</active>
    <description>Conflicts Check LDCCR</description>
    <label>Conflicts Check LDCCR</label>
</RecordType>