force-app/main/default/objects/Account/recordTypes/Houlihan_Company.recordType-meta.xml
<RecordType>
    <fullName>Houlihan_Company</fullName>
    <active>true</active>
    <description>Houlihan Company Offices</description>
    <label>Houlihan Company</label>
</RecordType>