force-app/main/default/objects/Account/recordTypes/Legal_Entity.recordType-meta.xml
<RecordType>
    <fullName>Legal_Entity</fullName>
    <active>true</active>
    <description>Intercompany Account Legal Entities</description>
    <label>Legal Entity</label>
</RecordType>