force-app/main/default/objects/Account/recordTypes/Operating_Company.recordType-meta.xml
<RecordType>
    <fullName>Operating_Company</fullName>
    <active>true</active>
    <description>Companies that make goods or provide services (ex. Information Technology,  Consumer Products, Healthcare, Law firm, Accounting, etc.)  These are often Portfolio Companies of Private Equity firms or Hedge Funds, prospective, engaged and/or former clients.</description>
    <label>Operating Company</label>
</RecordType>